@@ -1,31 +1,24 @@
 package com.example.demo.servlet;
 
 import jakarta.servlet.ServletException;
-import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-
 import java.io.IOException;
-import java.io.PrintWriter;
 
-@WebServlet("/echo")
 public class SimpleEchoServlet extends HttpServlet {
 
     @Override
-    protected void doGet(HttpServletRequest request, HttpServletResponse response)
+    public void doGet(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
 
         response.setContentType("text/plain");
-        PrintWriter out = response.getWriter();
+        String msg = request.getParameter("message");
 
-        String name = request.getParameter("name");
-
-        // Trim & validate name
-        if (name == null || name.trim().isEmpty()) {
-            out.write("Hello, Guest");
-        } else {
-            out.write("Hello, " + name.trim());
+        if (msg == null || msg.isBlank()) {
+            msg = "No message provided";
         }
+
+        response.getWriter().write("Echo: " + msg);
     }
 }
